# email-collect

./: .gitignore  Cargo.toml
migrations/2019-07-27-192019_email_collect/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
