[package]
name = "email-collect"
version = "0.1.0"
authors = ["Vyzer Network <x@vyzer.network>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
rocket = "0.4.2"
rocket_cors = "0.5.0-beta-2"
rocket-slog = "0.4.0-rc.2"
sendgrid = "0.8.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0.97"
slog = "2.5.2"
sloggers = "0.3.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
